backends/drm: don't set the content type drm property

We haven't seen any benefit from passing it through from apps and apparently
it can make atomic commits fail in some cases.

BUG: 480454


(cherry picked from commit b05fa94d327a61a61da56a59d8fadd4662c94a5b)